# private-standalone-network-node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.Builder  README.md  README_Docker.md  customSpec.json  customSpecRaw.json  docker-compose.public.yml  docker-compose.yml
.github/workflows/: build-docker-image.yaml
docs/: README.md  asset_restrictions.md  automated_token_transfer.md  batch_processing.md  contribution.md  create_sc_artifacts.md  deployment.md  derivative_assets.md  direct_wallet_transfer.md  fee_abstraction.md  quick-start.md  sc_specification.md  tests.md  tutorial.md
erc20/: README.md  lib.rs
erc20/.ink/abi_gen/: Cargo.toml
ext20/: lib.rs
firstInitSCSource/: Cargo.toml  lib.rs
frame/cere-ddc/: Cargo.toml
mockdata/sendStringData/: BobSendToThanh.txt  ThanhSendToAlice.txt
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/cere-ddc/: Cargo.toml
pallets/cere-ddc/src/: lib.rs  mock.rs  tests.rs
pallets/send-data/: Cargo.toml
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/test-pallet/: Cargo.toml
pallets/test-pallet/src/: lib.rs  mock.rs  tests.rs
postman/: Substrate Interface API.postman_collection.json
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: docker_build.sh  docker_build_bin.sh  docker_create_builder.sh  docker_run.sh
