[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
node-template-runtime = { path = '../runtime', version = '2.0.0' }

# Substrate dependencies
frame-benchmarking = { version = "2.0.0", path = "../../substrate/frame/benchmarking" }
frame-benchmarking-cli = { version = "2.0.0", path = "../../substrate/utils/frame/benchmarking-cli" }
pallet-transaction-payment-rpc = { version = "2.0.0", path = "../../substrate/frame/transaction-payment/rpc" }
sc-basic-authorship = { path = '../../substrate/client/basic-authorship' }
sc-cli = { features = ['wasmtime'], version = '0.8.0', path = '../../substrate/client/cli' }
sc-client-api = { version = "2.0.0", path = "../../substrate/client/api" }
sc-consensus = {version = '0.8.0', path = '../../substrate/client/consensus/common'}
sc-consensus-aura = { path = '../../substrate/client/consensus/aura' }
sc-executor = { features = ['wasmtime'], version = '0.8.0', path = '../../substrate/client/executor' }
sc-finality-grandpa = {version = '0.8.0', path = '../../substrate/client/finality-grandpa'}
sc-rpc = { version = "2.0.0", path = "../../substrate/client/rpc" }
sc-rpc-api = {version = '0.8.0', path = '../../substrate/client/rpc-api'}
sc-service = { features = ['wasmtime'], version = '0.8.0', path = '../../substrate/client/service' }
sc-transaction-pool = { version = "2.0.0", path = "../../substrate/client/transaction-pool" }
sp-api = { version = "2.0.0", path = "../../substrate/primitives/api" }
sp-block-builder = { version = "2.0.0", path = "../../substrate/primitives/block-builder" }
sp-blockchain = { version = "2.0.0", path = "../../substrate/primitives/blockchain" }
sp-consensus = {version = '0.8.0', path = '../../substrate/primitives/consensus/common'}
sp-consensus-aura = {version = '0.8.0', path = '../../substrate/primitives/consensus/aura'}
sp-core = { version = "2.0.0", path = "../../substrate/primitives/core" }
sp-finality-grandpa = { version = "2.0.0", path = "../../substrate/primitives/finality-grandpa" }
sp-inherents = { version = "2.0.0", path = "../../substrate/primitives/inherents" }
sp-runtime = { version = "2.0.0", path = "../../substrate/primitives/runtime" }
sp-transaction-pool = { version = "2.0.0", path = "../../substrate/primitives/transaction-pool" }
substrate-frame-rpc-system = { version = "2.0.0", path = "../../substrate/utils/frame/rpc/system" }

# Support pallet contract
pallet-contracts = { version = "2.0.0", default_features = false, path = '../../substrate/frame/contracts' } 
pallet-contracts-rpc = { version = "0.8.0", default_features = false, path = '../../substrate/frame/contracts/rpc' }

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
