[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '1.0.5' }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }

# local dependencies
pallet-cere-ddc = { path = '../pallets/cere-ddc', default-features = false, version = '2.0.0' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '2.0.0', path = '../../substrate/frame/benchmarking' }
frame-executive = { default-features = false, version = '2.0.0', path = '../../substrate/frame/executive' }
frame-support = { default-features = false, version = '2.0.0', path = '../../substrate/frame/support' }
frame-system = { default-features = false, version = '2.0.0', path = '../../substrate/frame/system' }
frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.0', path = '../../substrate/frame/system/benchmarking' }
frame-system-rpc-runtime-api = { default-features = false, version = '2.0.0', path = '../../substrate/frame/system/rpc/runtime-api' }
pallet-aura = { default-features = false, version = '2.0.0', path = '../../substrate/frame/aura' }
pallet-balances = { default-features = false, version = '2.0.0', path = '../../substrate/frame/balances' }
pallet-grandpa = { default-features = false, version = '2.0.0', path = '../../substrate/frame/grandpa' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.0', path = '../../substrate/frame/randomness-collective-flip' }
pallet-sudo = { default-features = false, version = '2.0.0', path = '../../substrate/frame/sudo' }
pallet-timestamp = { default-features = false, version = '2.0.0', path = '../../substrate/frame/timestamp' }
pallet-transaction-payment = { default-features = false, version = '2.0.0', path = '../../substrate/frame/transaction-payment' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.0', path = '../../substrate/frame/transaction-payment/rpc/runtime-api'}
sp-api = { default-features = false, version = '2.0.0', path = '../../substrate/primitives/api' }
sp-block-builder = { default-features = false, version = '2.0.0', path = '../../substrate/primitives/block-builder' }
sp-consensus-aura = { default-features = false, version = '0.8.0', path = '../../substrate/primitives/consensus/aura' }
sp-core = { default-features = false, version = '2.0.0', path = '../../substrate/primitives/core' }
sp-inherents = { default-features = false, version = '2.0.0', path = '../../substrate/primitives/inherents' }
sp-offchain = { default-features = false, version = '2.0.0', path = '../../substrate/primitives/offchain' }
sp-runtime = { default-features = false, version = '2.0.0', path = '../../substrate/primitives/runtime' }
sp-session = { default-features = false, version = '2.0.0', path = '../../substrate/primitives/session' }
sp-std = { default-features = false, version = '2.0.0', path = '../../substrate/primitives/std' }
sp-transaction-pool = { default-features = false, version = '2.0.0', path = '../../substrate/primitives/transaction-pool' }
sp-version = { default-features = false, version = '2.0.0', path = '../../substrate/primitives/version' }

# Support pallet contract
pallet-contracts = { version = "2.0.0", default_features = false, path = '../../substrate/frame/contracts' }
pallet-contracts-primitives = { version = "2.0.0", default_features = false, path = '../../substrate/frame/contracts/common' }
pallet-contracts-rpc-runtime-api = { version = "0.8.0", default-features = false, path = '../../substrate/frame/contracts/rpc/runtime-api' }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-cere-ddc/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    # Support pallet contract
    'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
]
