[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://www.cere.network/'
license = 'Unlicense'
name = 'pallet-cere-ddc'
repository = 'https://github.com/Cerebellum-Network/private-standalone-network-node/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0', path = '../../../substrate/frame/support'}
frame-system = { default-features = false, version = '2.0.0', path = '../../../substrate/frame/system' }
sp-std = { version = "2.0.0", default-features = false, path = '../../../substrate/primitives/std' }
sp-runtime = { default-features = false, version = '2.0.0', path = '../../../substrate/primitives/runtime' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0', path = '../../../substrate/primitives/core' }
sp-io = { default-features = false, version = '2.0.0', path = '../../../substrate/primitives/io' }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
]
